Footer spacing fix
Removed padding on links so no space at base of footer.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,6 @@ body {
 a {
   color: white;
   font-weight: normal;
-  padding: 10px 5px;
   font-size: 16px;
   text-decoration: none;
 }
